test/ddc-spec/error/01-ErrorExp/06-ImportCapNotData/Test.ds

-- ISSUE #408: No source locations for import and export errors.
module Test

import foreign abstract capability
 derp : Nat#

where
